Handle destroy callbacks of type other than GDestroyNotify

It's not necessary that a destroy callback is literally of type
GDestroyNotify - we can handle any 'void (*function) (void *)'

So instead of checking against the type of the callback to
see what to skip, look for a callback that was previously used as
a GDestroyNotify for another callback.

https://bugzilla.gnome.org/show_bug.cgi?id=617972